vs code settings change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#839751",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#83975199",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#839751"
 }
